# turingmachinelib

./: README.md  pyproject.toml
.github/workflows/: test-package.yml
examples/: helloworld.py
src/turingmachine/: state.py  structs.py
tests/: test_pointer.py  test_state.py  test_turingmachine.py
turingmachinelib/: __init__.py  pointer.py  state.py  structs.py  turingmachine.py
